Write out qdrouter information to "failed_tests" folder. Use Paths.